src/y.output
State 48 conflicts: 1 reduce/reduce
State 68 conflicts: 20 reduce/reduce
State 81 conflicts: 1 reduce/reduce


Grammar

    0 $accept: programme $end

    1 programme: liste_declarations liste_fonctions

    2 liste_declarations: liste_declarations declaration
    3                   | %empty

    4 liste_fonctions: liste_fonctions_creator
    5                | %empty

    6 liste_fonctions_creator: liste_fonctions_creator fonction
    7                        | fonction

    8 declaration: type liste_declarateurs ';'
    9            | EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';'

   10 liste_declarateurs: liste_declarateurs ',' declarateur
   11                   | declarateur

   12 declarateur: IDENTIFICATEUR
   13            | declarateur '[' CONSTANTE ']'

   14 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

   15 type: VOID
   16     | INT

   17 parm: INT IDENTIFICATEUR

   18 liste_parms: liste_parm_creator
   19            | %empty

   20 liste_parm_creator: liste_parm_creator ',' parm
   21                   | parm

   22 liste_instructions: inst_liste_creator
   23                   | %empty

   24 inst_liste_creator: inst_liste_creator instruction
   25                   | instruction

   26 instruction: iteration
   27            | selection
   28            | saut
   29            | affectation ';'
   30            | bloc
   31            | appel

   32 iteration: FOR '(' affectation ';' condition ';' affectation ')' instruction
   33          | WHILE '(' condition ')' instruction

   34 selection: IF '(' condition ')' instruction
   35          | IF '(' condition ')' instruction ELSE instruction
   36          | SWITCH '(' expression ')' '{' list_case_default '}'

   37 list_case_default: list_case_default case_default
   38                  | case_default

   39 case_default: CASE CONSTANTE ':' liste_instructions
   40             | DEFAULT ':' liste_instructions

   41 saut: BREAK ';'
   42     | RETURN ';'
   43     | RETURN expression ';'

   44 affectation: variable '=' expression

   45 bloc: '{' liste_declarations liste_instructions '}'

   46 appel: IDENTIFICATEUR '(' liste_expressions ')' ';'

   47 variable: IDENTIFICATEUR
   48         | tableau

   49 tableau: IDENTIFICATEUR
   50        | tableau '[' expression ']'

   51 expression: '(' expression ')'
   52           | expression PLUS expression
   53           | expression MOINS expression
   54           | expression DIV expression
   55           | expression MUL expression
   56           | expression RSHIFT expression
   57           | expression LSHIFT expression
   58           | expression BAND expression
   59           | expression BOR expression
   60           | MOINS expression
   61           | CONSTANTE
   62           | variable
   63           | IDENTIFICATEUR '(' liste_expressions ')'

   64 liste_expressions: expr_liste_creator
   65                  | %empty

   66 expr_liste_creator: expr_liste_creator ',' expression
   67                   | expression

   68 condition: NOT '(' condition ')'
   69          | condition binary_rel condition
   70          | '(' condition ')'
   71          | expression binary_comp expression

   72 binary_rel: LAND
   73           | LOR

   74 binary_comp: LT
   75            | GT
   76            | GEQ
   77            | LEQ
   78            | EQ
   79            | NEQ


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 14 32 33 34 35 36 46 51 63 68 70
    ')' (41) 9 14 32 33 34 35 36 46 51 63 68 70
    ',' (44) 10 20 66
    ':' (58) 39 40
    ';' (59) 8 9 29 32 41 42 43 46
    '=' (61) 44
    '[' (91) 13 50
    ']' (93) 13 50
    '{' (123) 14 36 45
    '}' (125) 14 36 45
    error (256)
    VOID (258) 15
    INT (259) 16 17
    FOR (260) 32
    WHILE (261) 33
    IF (262) 34 35
    ELSE (263) 35
    SWITCH (264) 36
    CASE (265) 39
    DEFAULT (266) 40
    BREAK (267) 41
    RETURN (268) 42 43
    PLUS (269) 52
    MOINS (270) 53 60
    MUL (271) 55
    DIV (272) 54
    LSHIFT (273) 57
    RSHIFT (274) 56
    BAND (275) 58
    BOR (276) 59
    LAND (277) 72
    LOR (278) 73
    LT (279) 74
    GT (280) 75
    GEQ (281) 76
    LEQ (282) 77
    EQ (283) 78
    NEQ (284) 79
    NOT (285) 68
    EXTERN (286) 9
    THEN (287)
    REL (288)
    IDENTIFICATEUR <label> (289) 9 12 14 17 46 47 49 63
    CONSTANTE <label> (290) 13 39 61


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    programme <arbre> (47)
        on left: 1
        on right: 0
    liste_declarations <symbole> (48)
        on left: 2 3
        on right: 1 2 14 45
    liste_fonctions <arbre> (49)
        on left: 4 5
        on right: 1
    liste_fonctions_creator <arbre> (50)
        on left: 6 7
        on right: 4 6
    declaration <symbole> (51)
        on left: 8 9
        on right: 2
    liste_declarateurs <symbole> (52)
        on left: 10 11
        on right: 8 10
    declarateur <symbole> (53)
        on left: 12 13
        on right: 10 11 13
    fonction <arbre> (54)
        on left: 14
        on right: 6 7
    type <type_t> (55)
        on left: 15 16
        on right: 8 9 14
    parm <symbole> (56)
        on left: 17
        on right: 20 21
    liste_parms <symbole> (57)
        on left: 18 19
        on right: 9 14
    liste_parm_creator <symbole> (58)
        on left: 20 21
        on right: 18 20
    liste_instructions <arbre> (59)
        on left: 22 23
        on right: 14 39 40 45
    inst_liste_creator <arbre> (60)
        on left: 24 25
        on right: 22 24
    instruction <arbre> (61)
        on left: 26 27 28 29 30 31
        on right: 24 25 32 33 34 35
    iteration <arbre> (62)
        on left: 32 33
        on right: 26
    selection <arbre> (63)
        on left: 34 35 36
        on right: 27
    list_case_default <arbre> (64)
        on left: 37 38
        on right: 36 37
    case_default <arbre> (65)
        on left: 39 40
        on right: 37 38
    saut <arbre> (66)
        on left: 41 42 43
        on right: 28
    affectation <arbre> (67)
        on left: 44
        on right: 29 32
    bloc <arbre> (68)
        on left: 45
        on right: 30
    appel <arbre> (69)
        on left: 46
        on right: 31
    variable <arbre> (70)
        on left: 47 48
        on right: 44 62
    tableau <arbre> (71)
        on left: 49 50
        on right: 48 50
    expression <arbre> (72)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 36 43 44 50 51 52 53 54 55 56 57 58 59 60 66 67 71
    liste_expressions <arbre> (73)
        on left: 64 65
        on right: 46 63
    expr_liste_creator <arbre> (74)
        on left: 66 67
        on right: 64 66
    condition <arbre> (75)
        on left: 68 69 70 71
        on right: 32 33 34 35 68 69 70
    binary_rel <label> (76)
        on left: 72 73
        on right: 69
    binary_comp <label> (77)
        on left: 74 75 76 77 78 79
        on right: 71


State 0

    0 $accept: . programme $end

    $default  reduce using rule 3 (liste_declarations)

    programme           go to state 1
    liste_declarations  go to state 2


State 1

    0 $accept: programme . $end

    $end  shift, and go to state 3


State 2

    1 programme: liste_declarations . liste_fonctions
    2 liste_declarations: liste_declarations . declaration

    VOID    shift, and go to state 4
    INT     shift, and go to state 5
    EXTERN  shift, and go to state 6

    $default  reduce using rule 5 (liste_fonctions)

    liste_fonctions          go to state 7
    liste_fonctions_creator  go to state 8
    declaration              go to state 9
    fonction                 go to state 10
    type                     go to state 11


State 3

    0 $accept: programme $end .

    $default  accept


State 4

   15 type: VOID .

    $default  reduce using rule 15 (type)


State 5

   16 type: INT .

    $default  reduce using rule 16 (type)


State 6

    9 declaration: EXTERN . type IDENTIFICATEUR '(' liste_parms ')' ';'

    VOID  shift, and go to state 4
    INT   shift, and go to state 5

    type  go to state 12


State 7

    1 programme: liste_declarations liste_fonctions .

    $default  reduce using rule 1 (programme)


State 8

    4 liste_fonctions: liste_fonctions_creator .
    6 liste_fonctions_creator: liste_fonctions_creator . fonction

    VOID  shift, and go to state 4
    INT   shift, and go to state 5

    $default  reduce using rule 4 (liste_fonctions)

    fonction  go to state 13
    type      go to state 14


State 9

    2 liste_declarations: liste_declarations declaration .

    $default  reduce using rule 2 (liste_declarations)


State 10

    7 liste_fonctions_creator: fonction .

    $default  reduce using rule 7 (liste_fonctions_creator)


State 11

    8 declaration: type . liste_declarateurs ';'
   14 fonction: type . IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    IDENTIFICATEUR  shift, and go to state 15

    liste_declarateurs  go to state 16
    declarateur         go to state 17


State 12

    9 declaration: EXTERN type . IDENTIFICATEUR '(' liste_parms ')' ';'

    IDENTIFICATEUR  shift, and go to state 18


State 13

    6 liste_fonctions_creator: liste_fonctions_creator fonction .

    $default  reduce using rule 6 (liste_fonctions_creator)


State 14

   14 fonction: type . IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    IDENTIFICATEUR  shift, and go to state 19


State 15

   12 declarateur: IDENTIFICATEUR .
   14 fonction: type IDENTIFICATEUR . '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    '('  shift, and go to state 20

    $default  reduce using rule 12 (declarateur)


State 16

    8 declaration: type liste_declarateurs . ';'
   10 liste_declarateurs: liste_declarateurs . ',' declarateur

    ';'  shift, and go to state 21
    ','  shift, and go to state 22


State 17

   11 liste_declarateurs: declarateur .
   13 declarateur: declarateur . '[' CONSTANTE ']'

    '['  shift, and go to state 23

    $default  reduce using rule 11 (liste_declarateurs)


State 18

    9 declaration: EXTERN type IDENTIFICATEUR . '(' liste_parms ')' ';'

    '('  shift, and go to state 24


State 19

   14 fonction: type IDENTIFICATEUR . '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    '('  shift, and go to state 20


State 20

   14 fonction: type IDENTIFICATEUR '(' . liste_parms ')' '{' liste_declarations liste_instructions '}'

    INT  shift, and go to state 25

    $default  reduce using rule 19 (liste_parms)

    parm                go to state 26
    liste_parms         go to state 27
    liste_parm_creator  go to state 28


State 21

    8 declaration: type liste_declarateurs ';' .

    $default  reduce using rule 8 (declaration)


State 22

   10 liste_declarateurs: liste_declarateurs ',' . declarateur

    IDENTIFICATEUR  shift, and go to state 29

    declarateur  go to state 30


State 23

   13 declarateur: declarateur '[' . CONSTANTE ']'

    CONSTANTE  shift, and go to state 31


State 24

    9 declaration: EXTERN type IDENTIFICATEUR '(' . liste_parms ')' ';'

    INT  shift, and go to state 25

    $default  reduce using rule 19 (liste_parms)

    parm                go to state 26
    liste_parms         go to state 32
    liste_parm_creator  go to state 28


State 25

   17 parm: INT . IDENTIFICATEUR

    IDENTIFICATEUR  shift, and go to state 33


State 26

   21 liste_parm_creator: parm .

    $default  reduce using rule 21 (liste_parm_creator)


State 27

   14 fonction: type IDENTIFICATEUR '(' liste_parms . ')' '{' liste_declarations liste_instructions '}'

    ')'  shift, and go to state 34


State 28

   18 liste_parms: liste_parm_creator .
   20 liste_parm_creator: liste_parm_creator . ',' parm

    ','  shift, and go to state 35

    $default  reduce using rule 18 (liste_parms)


State 29

   12 declarateur: IDENTIFICATEUR .

    $default  reduce using rule 12 (declarateur)


State 30

   10 liste_declarateurs: liste_declarateurs ',' declarateur .
   13 declarateur: declarateur . '[' CONSTANTE ']'

    '['  shift, and go to state 23

    $default  reduce using rule 10 (liste_declarateurs)


State 31

   13 declarateur: declarateur '[' CONSTANTE . ']'

    ']'  shift, and go to state 36


State 32

    9 declaration: EXTERN type IDENTIFICATEUR '(' liste_parms . ')' ';'

    ')'  shift, and go to state 37


State 33

   17 parm: INT IDENTIFICATEUR .

    $default  reduce using rule 17 (parm)


State 34

   14 fonction: type IDENTIFICATEUR '(' liste_parms ')' . '{' liste_declarations liste_instructions '}'

    '{'  shift, and go to state 38


State 35

   20 liste_parm_creator: liste_parm_creator ',' . parm

    INT  shift, and go to state 25

    parm  go to state 39


State 36

   13 declarateur: declarateur '[' CONSTANTE ']' .

    $default  reduce using rule 13 (declarateur)


State 37

    9 declaration: EXTERN type IDENTIFICATEUR '(' liste_parms ')' . ';'

    ';'  shift, and go to state 40


State 38

   14 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' . liste_declarations liste_instructions '}'

    $default  reduce using rule 3 (liste_declarations)

    liste_declarations  go to state 41


State 39

   20 liste_parm_creator: liste_parm_creator ',' parm .

    $default  reduce using rule 20 (liste_parm_creator)


State 40

    9 declaration: EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';' .

    $default  reduce using rule 9 (declaration)


State 41

    2 liste_declarations: liste_declarations . declaration
   14 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations . liste_instructions '}'

    VOID            shift, and go to state 4
    INT             shift, and go to state 5
    FOR             shift, and go to state 42
    WHILE           shift, and go to state 43
    IF              shift, and go to state 44
    SWITCH          shift, and go to state 45
    BREAK           shift, and go to state 46
    RETURN          shift, and go to state 47
    EXTERN          shift, and go to state 6
    IDENTIFICATEUR  shift, and go to state 48
    '{'             shift, and go to state 49

    $default  reduce using rule 23 (liste_instructions)

    declaration         go to state 9
    type                go to state 50
    liste_instructions  go to state 51
    inst_liste_creator  go to state 52
    instruction         go to state 53
    iteration           go to state 54
    selection           go to state 55
    saut                go to state 56
    affectation         go to state 57
    bloc                go to state 58
    appel               go to state 59
    variable            go to state 60
    tableau             go to state 61


State 42

   32 iteration: FOR . '(' affectation ';' condition ';' affectation ')' instruction

    '('  shift, and go to state 62


State 43

   33 iteration: WHILE . '(' condition ')' instruction

    '('  shift, and go to state 63


State 44

   34 selection: IF . '(' condition ')' instruction
   35          | IF . '(' condition ')' instruction ELSE instruction

    '('  shift, and go to state 64


State 45

   36 selection: SWITCH . '(' expression ')' '{' list_case_default '}'

    '('  shift, and go to state 65


State 46

   41 saut: BREAK . ';'

    ';'  shift, and go to state 66


State 47

   42 saut: RETURN . ';'
   43     | RETURN . expression ';'

    MOINS           shift, and go to state 67
    IDENTIFICATEUR  shift, and go to state 68
    CONSTANTE       shift, and go to state 69
    ';'             shift, and go to state 70
    '('             shift, and go to state 71

    variable    go to state 72
    tableau     go to state 61
    expression  go to state 73


State 48

   46 appel: IDENTIFICATEUR . '(' liste_expressions ')' ';'
   47 variable: IDENTIFICATEUR .
   49 tableau: IDENTIFICATEUR .

    '('  shift, and go to state 74

    '['       reduce using rule 49 (tableau)
    '='       reduce using rule 47 (variable)
    '='       [reduce using rule 49 (tableau)]
    $default  reduce using rule 47 (variable)


State 49

   45 bloc: '{' . liste_declarations liste_instructions '}'

    $default  reduce using rule 3 (liste_declarations)

    liste_declarations  go to state 75


State 50

    8 declaration: type . liste_declarateurs ';'

    IDENTIFICATEUR  shift, and go to state 29

    liste_declarateurs  go to state 16
    declarateur         go to state 17


State 51

   14 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions . '}'

    '}'  shift, and go to state 76


State 52

   22 liste_instructions: inst_liste_creator .
   24 inst_liste_creator: inst_liste_creator . instruction

    FOR             shift, and go to state 42
    WHILE           shift, and go to state 43
    IF              shift, and go to state 44
    SWITCH          shift, and go to state 45
    BREAK           shift, and go to state 46
    RETURN          shift, and go to state 47
    IDENTIFICATEUR  shift, and go to state 48
    '{'             shift, and go to state 49

    $default  reduce using rule 22 (liste_instructions)

    instruction  go to state 77
    iteration    go to state 54
    selection    go to state 55
    saut         go to state 56
    affectation  go to state 57
    bloc         go to state 58
    appel        go to state 59
    variable     go to state 60
    tableau      go to state 61


State 53

   25 inst_liste_creator: instruction .

    $default  reduce using rule 25 (inst_liste_creator)


State 54

   26 instruction: iteration .

    $default  reduce using rule 26 (instruction)


State 55

   27 instruction: selection .

    $default  reduce using rule 27 (instruction)


State 56

   28 instruction: saut .

    $default  reduce using rule 28 (instruction)


State 57

   29 instruction: affectation . ';'

    ';'  shift, and go to state 78


State 58

   30 instruction: bloc .

    $default  reduce using rule 30 (instruction)


State 59

   31 instruction: appel .

    $default  reduce using rule 31 (instruction)


State 60

   44 affectation: variable . '=' expression

    '='  shift, and go to state 79


State 61

   48 variable: tableau .
   50 tableau: tableau . '[' expression ']'

    '['  shift, and go to state 80

    $default  reduce using rule 48 (variable)


State 62

   32 iteration: FOR '(' . affectation ';' condition ';' affectation ')' instruction

    IDENTIFICATEUR  shift, and go to state 81

    affectation  go to state 82
    variable     go to state 60
    tableau      go to state 61


State 63

   33 iteration: WHILE '(' . condition ')' instruction

    MOINS           shift, and go to state 67
    NOT             shift, and go to state 83
    IDENTIFICATEUR  shift, and go to state 68
    CONSTANTE       shift, and go to state 69
    '('             shift, and go to state 84

    variable    go to state 72
    tableau     go to state 61
    expression  go to state 85
    condition   go to state 86


State 64

   34 selection: IF '(' . condition ')' instruction
   35          | IF '(' . condition ')' instruction ELSE instruction

    MOINS           shift, and go to state 67
    NOT             shift, and go to state 83
    IDENTIFICATEUR  shift, and go to state 68
    CONSTANTE       shift, and go to state 69
    '('             shift, and go to state 84

    variable    go to state 72
    tableau     go to state 61
    expression  go to state 85
    condition   go to state 87


State 65

   36 selection: SWITCH '(' . expression ')' '{' list_case_default '}'

    MOINS           shift, and go to state 67
    IDENTIFICATEUR  shift, and go to state 68
    CONSTANTE       shift, and go to state 69
    '('             shift, and go to state 71

    variable    go to state 72
    tableau     go to state 61
    expression  go to state 88


State 66

   41 saut: BREAK ';' .

    $default  reduce using rule 41 (saut)


State 67

   60 expression: MOINS . expression

    MOINS           shift, and go to state 67
    IDENTIFICATEUR  shift, and go to state 68
    CONSTANTE       shift, and go to state 69
    '('             shift, and go to state 71

    variable    go to state 72
    tableau     go to state 61
    expression  go to state 89


State 68

   47 variable: IDENTIFICATEUR .
   49 tableau: IDENTIFICATEUR .
   63 expression: IDENTIFICATEUR . '(' liste_expressions ')'

    '('  shift, and go to state 90

    PLUS      reduce using rule 47 (variable)
    PLUS      [reduce using rule 49 (tableau)]
    MOINS     reduce using rule 47 (variable)
    MOINS     [reduce using rule 49 (tableau)]
    MUL       reduce using rule 47 (variable)
    MUL       [reduce using rule 49 (tableau)]
    DIV       reduce using rule 47 (variable)
    DIV       [reduce using rule 49 (tableau)]
    LSHIFT    reduce using rule 47 (variable)
    LSHIFT    [reduce using rule 49 (tableau)]
    RSHIFT    reduce using rule 47 (variable)
    RSHIFT    [reduce using rule 49 (tableau)]
    BAND      reduce using rule 47 (variable)
    BAND      [reduce using rule 49 (tableau)]
    BOR       reduce using rule 47 (variable)
    BOR       [reduce using rule 49 (tableau)]
    LAND      reduce using rule 47 (variable)
    LAND      [reduce using rule 49 (tableau)]
    LOR       reduce using rule 47 (variable)
    LOR       [reduce using rule 49 (tableau)]
    LT        reduce using rule 47 (variable)
    LT        [reduce using rule 49 (tableau)]
    GT        reduce using rule 47 (variable)
    GT        [reduce using rule 49 (tableau)]
    GEQ       reduce using rule 47 (variable)
    GEQ       [reduce using rule 49 (tableau)]
    LEQ       reduce using rule 47 (variable)
    LEQ       [reduce using rule 49 (tableau)]
    EQ        reduce using rule 47 (variable)
    EQ        [reduce using rule 49 (tableau)]
    NEQ       reduce using rule 47 (variable)
    NEQ       [reduce using rule 49 (tableau)]
    ';'       reduce using rule 47 (variable)
    ';'       [reduce using rule 49 (tableau)]
    ')'       reduce using rule 47 (variable)
    ')'       [reduce using rule 49 (tableau)]
    ','       reduce using rule 47 (variable)
    ','       [reduce using rule 49 (tableau)]
    '['       reduce using rule 49 (tableau)
    ']'       reduce using rule 47 (variable)
    ']'       [reduce using rule 49 (tableau)]
    $default  reduce using rule 47 (variable)


State 69

   61 expression: CONSTANTE .

    $default  reduce using rule 61 (expression)


State 70

   42 saut: RETURN ';' .

    $default  reduce using rule 42 (saut)


State 71

   51 expression: '(' . expression ')'

    MOINS           shift, and go to state 67
    IDENTIFICATEUR  shift, and go to state 68
    CONSTANTE       shift, and go to state 69
    '('             shift, and go to state 71

    variable    go to state 72
    tableau     go to state 61
    expression  go to state 91


State 72

   62 expression: variable .

    $default  reduce using rule 62 (expression)


State 73

   43 saut: RETURN expression . ';'
   52 expression: expression . PLUS expression
   53           | expression . MOINS expression
   54           | expression . DIV expression
   55           | expression . MUL expression
   56           | expression . RSHIFT expression
   57           | expression . LSHIFT expression
   58           | expression . BAND expression
   59           | expression . BOR expression

    PLUS    shift, and go to state 92
    MOINS   shift, and go to state 93
    MUL     shift, and go to state 94
    DIV     shift, and go to state 95
    LSHIFT  shift, and go to state 96
    RSHIFT  shift, and go to state 97
    BAND    shift, and go to state 98
    BOR     shift, and go to state 99
    ';'     shift, and go to state 100


State 74
